--- a/pinpoint-1.7.1/web/pom.xml
+++ b/pinpoint-1.7.1/web/pom.xml
@@ -37,12 +37,13 @@
             <artifactId>common-tools</artifactId>
             <version>1.1.1</version>
         </dependency>
+        <!-- mybatis 分页插件 -->
         <dependency>
-            <!-- pageHelper分页插件 -->
             <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper-spring-boot-starter</artifactId>
-            <version>1.2.5</version>
+            <artifactId>pagehelper</artifactId>
+            <version>4.1.6</version>
         </dependency>
+
 
         <dependency>
             <groupId>com.navercorp.pinpoint</groupId>
